# Selfwork_Python_Francesco_Scaccetti_01

./: esercitazione_python-1.ipynb  esercitazione_python-2.ipynb
esercizi-ollama/: pyproject.toml
esercizi-ollama/scripts/: ex_1_traduzione.py  ex_2_estrazionedati.py  ex_3_riassunto.py  ex_4_dati.py  ex_5_domande.py
esercizi-openai/: pyproject.toml
esercizi-openai/notebooks/: ex_1_OpenAI_API.ipynb  ex_2_OpenAI_API.ipynb  ex_3_OpenAI_API.ipynb  ex_4_OpenAI_API.ipynb  ex_5_OpenAI_API.ipynb
esercizi-openai/scripts/: ex_1_traduzione.py  ex_2_estrazione_dati.py  ex_3_riassunto.py  ex_4_dati_a_testo.py  ex_5_domande_comprensione.py
